# aws-sdk-rust-concurrency-issue

./: .env.example  Cargo.toml  README.md
src/: main.rs
