[package]
name = "aws-sdk-rust-concurrent-issue"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.24.0"
dotenv = { version = "0.15.0", default-features = false }
futures = "0.3.30"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
